app/assets/css/main.css
/* main.css */

.row>* {
  width: 0;
}

a {
  text-decoration: none;
}

.anime-row>* {
  max-width: 100%;
  padding-right: calc(var(--bs-gutter-x) * .5);
  padding-left: calc(var(--bs-gutter-x) * .5);
  margin-top: var(--bs-gutter-y);
}

a>*:hover, a:hover {
  color: var(--bs-link-hover-color)!important;
}

#search .row>* {
  width: inherit;
}

.banner, #overlay {
  height: 500px;
  justify-content: end;
}

#anime-page #front {
  height: 190px;
}

img, iframe, .image {
  border-radius: 6px;
}

img {
  -webkit-user-drag: none;
  user-select: none;
}

#front img {
  height: 470px;
  margin-right: 14rem!important;
}

#overlay {
  background-image: linear-gradient(90deg, rgba(var(--bs-dark-bg-rbg), .9) 30%, rgb(255 255 255 / 0%) 70%);
}

#info {
  left: 3%;
  width: 48%!important;
  text-shadow: 1px 1px 1px black;
}

.stars {
  filter: hue-rotate(204deg) saturate(1) brightness(1.5);
}

#blur {
  z-index: -1;
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
}

#preview #blur {
  filter: brightness(.75)
}

#anime-page #blur {
  opacity: .9;
}

.image {
  height: 380px;
}

#anime-page #details {
  justify-content: space-between;
}

@media only screen and (width <= 1500px) {
  .image {
    height: 300px;
  }

  .character-element {
    height: 250px!important;
  }

  .character-on-anime {
    width: 80px!important;
  }
}

@media only screen and (width <= 1199px) {
  #front img {
    margin-right: 6rem!important;
  }

  .image {
    height: 250px;
  }

  .character-element {
    height: 200px!important;
  }
  
  .character-on-anime {
    width: 60px!important;
  }
}

@media only screen and (width <= 991px) {
  #front img {
    margin-right: 0!important;
  }

  .image {
    height: 300px;
  }

  .character-element {
    height: 250px!important;
  }

  .character-on-anime {
    width: 80px!important;
  }
}

@media only screen and (width <= 767px) {
  .banner {
    height: auto;
    justify-content: center;
  }

  #front {
    padding-bottom: 180px;
  }

  #front img {
    width: 60%;
    height: auto;
    margin-right: 0!important;
  }

  #info {
  width: 95%!important;
  padding-bottom: 2rem;
  left: 2%;
  bottom: 0;
  }

  #info h2 {
  font-size: 1.2rem;
  }

  #info h6, #category-desc h6, #anime-page h6 {
  font-size: .75rem;
  }

  #overlay {
  height: 100%;
  background-image: linear-gradient(0deg, rgba(var(--bs-dark-bg-rbg), .9) 30%, rgb(255 255 255 / 0%) 70%);
  }

  #anime-nav a>* {
    font-size: .8rem!important;
  }
  
  #preview .row>* {
    width: 100%;
  }

  .modal.show {
    padding-bottom: 8rem!important;
  }

  #preview h3 {
    font-size: 1.1rem;
  }

  small {
    font-size: .7rem;
  }

  .image {
    height: 220px;
  }

  #anime-page #details {
    justify-content: center;
  }

  .character-on-anime {
    width: 75px;
  }
}

@media only screen and (width <= 575px) {
  .image {
    height: 270px;
  }

  .character-element {
    height: 290px!important;
  }

  .character-on-anime {
    width: 76px!important;
  }
}

.sidebar, .sidebar .nav {
  width: 72px!important;
}

#video-modal .modal-content, #video-modal.modal-header {
  background-color: transparent;
  border: none;
}

#video-modal .modal-content {
  max-width: 975px;
}

#video-modal .modal-dialog {
  max-width: 100%;
  margin: 20px auto;
}

.modal-dialog-centered {
  justify-content: center;
}

#video-modal .modal-body {
  padding: 0;
}

input {
  font-size: 24px;
}

input:focus-visible {
  outline: none;
}

.anime-row {
  margin-top: calc(-1 * var(--bs-gutter-y));
  margin-right: calc(-.5 * var(--bs-gutter-x));
  margin-left: calc(-.5 * var(--bs-gutter-x));
}

.nuxt-loading-indicator {
  background: repeating-linear-gradient(to right,#fff 0%,#ffc575 50%,var(--bs-primary) 100%)!important;
}

#menu .router-link-active {
  color: var(--bs-primary)!important;
}

.scale-on-hover, .scale-full-on-hover {
  transition: .3s linear;
}

.scale-on-hover:hover, .episode-card:hover .scale-on-hover {
  transform: scale(1.1);
}

.scale-full-on-hover:hover {
  width: 85%!important;
  opacity: 1!important;
}

#anime-nav .router-link-active>* {
  border-bottom: 2px solid var(--bs-primary);
  color: var(--bs-primary);
}

#episodes a:hover .invisible {
  visibility: visible!important;
  font-size: 1.6rem;
}

.fw-500 {
  font-weight: 500;
}

#episodes a:hover img {
  opacity: .4;
}

#people-page .staff-description, #people-page .staff-description p {
  font-weight: normal
}

.character-on-anime {
  border-radius: 16px 0 0 !important;
  border-color: var(--bs-secondary)!important;
  transition: all .3s ease-in-out;
}

.character-element:hover .character-on-anime {
  opacity: .4;
}

#back-to-top:hover {
  background-color: var(--bs-link-hover-color)!important;
}

.p-button {
  background: var(--bs-primary);
  border: 1px solid var(--bs-primary);
}

.p-button:not(:disabled):hover {
  background: var(--bs-link-hover-color);
  border: 1px solid var(--bs-link-hover-color);
}

#themes a:hover {
  text-decoration: underline!important;
}

.carousel-indicators [data-bs-target] {
  background-color: white!important;
}

